k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-tools
  namespace: it
spec:
  replicas: 1
  selector:
    matchLabels:
      app: it-tools
  template:
    metadata:
      labels:
        app: it-tools
    spec:
      containers:
      - name: it-tools
        image: ccr.ccs.tencentyun.com/herbduan/it-tools:$(VERSION)
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: it-tools
  namespace: it
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: it-tools
